Atualização geral: rotas, menus, endpoints, integração Netlify/Neon, painéis admin/cliente/lojista

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/react-helmet": "^6.1.11",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
