--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_CONFIG_PRODUCTION = "false"
 
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
