--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
+  to = "/.netlify/functions/:splat"
   status = 200
 
 [[redirects]]
